5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1590_2894.log
== TEST (2019-04-03 14:34:12) 
-- CODE:
var = input(8*x + 45)
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = input(8*x + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:35:44) 
-- CODE:
a = valor dos jogos =input(x) 
var = input(8*a + 45)
print(var)
-- ERROR:
File "XXXX", line 1
    a = valor dos jogos =input(x) 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:36:02) 
-- CODE:
a = valor dos jogos = x
var = input(8*a + 45)
print(var)
-- ERROR:
File "XXXX", line 1
    a = valor dos jogos = x
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:36:15) 
-- CODE:
a = valor dos jogos = (x)
var = input(8*a + 45)
print(var)
-- ERROR:
File "XXXX", line 1
    a = valor dos jogos = (x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:36:58) 
-- CODE:
a = valor dos jogos = (x)
var = (print)input(8*a + 45)
print(var)
-- ERROR:
File "XXXX", line 1
    a = valor dos jogos = (x)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:40:11) 
-- CODE:
var = input(8* + 45)
input(var)
print(input)
float(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    input(var)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:40:22) 
-- CODE:
var = input(8*x + 45)
input(var)
print(input)
float(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var = input(8*x + 45)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:40:56) 
-- CODE:

x=2
var = input(8*x + 45)
input(var)
print(input)
float(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    input(var)
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:41:05) 
-- CODE:

x=2
var = input(8*x + 45)
input(var)
print(input)
float(x)
-- EXECUTION TIME:
0.122141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 4, in <module>
    input(var)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 15:21:00) 
-- CODE:

x=2
var = input(8*x + 45)
input(var)
print(input)
float(x)
-- EXECUTION TIME:
0.195041
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2894/main.py", line 4, in <module>
    input(var)
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
